# Hyperion

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  requirements.txt
backend/: .dockerignore  Dockerfile  README.md  agent_contract.py  agent_contract.yaml  dummy_crm_swagger.json  graph_db.py  main.py  make_request.py  mock_agent.py  mock_shadow_agent.py  pyproject.toml  real_agent.py  requirements.txt  reversal_engine.py  rollback_engine.py  test_distributed_saga.py  test_neo4j.py  test_stripe_reversal.py
backend/alembic/: env.py
backend/alembic/versions/: 20241008_01_initialize_core_tables.py  88e85c6ea4b2_baseline.py  8e3e7aa92bc6_init_runs.py  c5901cba78f7_runs_simulation_fields.py
backend/app/: __main__.py  main.py
backend/app/api/: api.py
backend/app/api/routes/: audit.py  health.py  orgs.py  runs.py  simulate.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  audit_log.py  membership.py  organization.py  run.py  user.py
backend/app/schemas/: audit.py  org.py  run.py  simulate.py
backend/app/services/: audit.py  github.py
backend/app/utils/: slugify.py
docs/: README.md  getting-started.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/connectors/: page.tsx
frontend/app/login/: page.tsx
frontend/app/policies/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/runs/: page.tsx
frontend/components/: CreateOrgForm.tsx  NavBar.tsx
frontend/lib/: api.ts
infra/: docker-compose.yml
(+6 files in other folders)
